# cgshop2024-packing

./: .bashrc  .envrc  .gitignore  .tmuxinator.yml  CMakeLists.txt  Dockerfile  GUROBIConfig.cmake  input.txt  logfile123  notes  notes.md  old_bash_history  pyrightconfig.json  tmpfile
minimalexample/: A.cpp  CMakeCache.txt  cmake_install.cmake  main.cpp
misc/: old_bash_history_server
misc/minimalexample/: A.h  B.cpp  B.h  CMakeLists.txt  Makefile  MyApp
scripts/: visualize.py
src/: main.py  metadata.py  outputinfo.py  produce.py  visualize.py  visualize_solution.py
src/cpp/: io.cpp  io.h  main.cpp  pch.h  util.cpp
src/cpp/algorithms/: dummy.cpp  optimal.cpp
src/cpp/lib2/: configuration_space.cpp  configuration_space.h  convex_cover.cpp  heuristic_packing.cpp  heuristic_packing.h  mip.cpp  mip.h  optimal_packing.cpp  optimal_packing.h  repacking.cpp  repacking.h  simplification.cpp  simplification.h  snap.cpp  snap.h  util.cpp  util.h  utils.cpp
src/cpp/lib2/mip/: gurobi.cpp  gurobi.h  gurobi_example.cpp  mip.cpp  mip.h  scip.cpp  scip.h  scip_example.cpp
src/py/: algorithm.py  configuration.py  io.py  math.py  outputgrabber.py  polygon.py  visualize.py
